policies/gatekeeper/templates/req010-non-root-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: doranonroot
  annotations:
    dora.article: "9(4)(a)"
    dora.requirement: "REQ-010"
spec:
  crd:
    spec:
      names:
        kind: DoraRunAsNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package doranonroot

        # Check each container in the pod spec
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.securityContext.runAsNonRoot
          msg := sprintf(
            "DORA Art. 9(4)(a) violation [REQ-010]: Container '%s' must set securityContext.runAsNonRoot: true.",
            [container.name]
          )
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not has_drop_all(container)
          msg := sprintf(
            "DORA Art. 9(4)(a) violation [REQ-010]: Container '%s' must drop ALL capabilities.",
            [container.name]
          )
        }

        has_drop_all(container) {
          drops := container.securityContext.capabilities.drop
          drops[_] == "ALL"
        }
